--- a/tzbot.cabal
+++ b/tzbot.cabal
@@ -161,6 +161,7 @@ library
     , unordered-containers
     , utf8-string
     , validation
+    , vector
     , yaml
   default-language: Haskell2010
 
