--- a/tzbot.cabal
+++ b/tzbot.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.7.
+-- This file has been generated from package.yaml by hpack version 0.35.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -301,6 +301,7 @@ test-suite tzbot-test
       Test.TzBot.GetTimeshiftsSpec
       Test.TzBot.HandleTooManyRequests
       Test.TzBot.MessageBlocksSpec
+      Test.TzBot.ParserSpec
       Test.TzBot.RenderSpec
       Test.TzBot.TimeReferenceToUtcSpec
       Tree
@@ -376,6 +377,7 @@ test-suite tzbot-test
     , tasty-hspec
     , tasty-hunit
     , tasty-quickcheck
+    , text
     , time
     , tzbot
     , tztime
