[#79] Add support for hyphenated intervals.
Problem: when a user writes "10am-11am UTC ...", context is not shared
between times, and second time can be skipped because every time should
go after a space.

Solution: Parse time references that are grouped via hyphen, slash,
"and", "or" sharing their context: date ref, location ref, am/pm.

--- a/tzbot.cabal
+++ b/tzbot.cabal
@@ -301,6 +301,7 @@ test-suite tzbot-test
       Test.TzBot.GetTimeshiftsSpec
       Test.TzBot.HandleTooManyRequests
       Test.TzBot.MessageBlocksSpec
+      Test.TzBot.ParserSpec
       Test.TzBot.RenderSpec
       Test.TzBot.TimeReferenceToUtcSpec
       Tree
@@ -376,6 +377,7 @@ test-suite tzbot-test
     , tasty-hspec
     , tasty-hunit
     , tasty-quickcheck
+    , text
     , time
     , tzbot
     , tztime
