[Chore] Add deployment step to buildkite pipeline
Problem: We need to set up CD.

Solution: Add deploy output to flake.nix, add deploy step to buildkite
pipeline.

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -37,3 +37,10 @@ steps:
 
   - label: REUSE lint
     command: nix build -L .#checks.x86_64-linux.reuse-lint
+
+  # wait for all checks to finish
+  - wait
+
+  - label : deploy staging
+    command: nix develop .#ci -c deploy .#staging --ssh-user deploy --skip-checks
+    branches: staging
