--- a/stack.yaml
+++ b/stack.yaml
@@ -2,17 +2,14 @@
 #
 # SPDX-License-Identifier: MPL-2.0
 
-resolver: lts-19.23
+resolver: lts-20.5
 
 packages:
 - .
 
 extra-deps:
-- git: https://github.com/serokell/nyan-interpolation.git
-  commit: 5e158057b167275d2150454e2bb731cfe686ea7a
-  subdirs:
-   - full
-   - core
+- nyan-interpolation-0.9.2
+- nyan-interpolation-core-0.9.2
 - git: https://github.com/velveteer/slacker.git
   commit: bf8e13bbc566f92f900d2cc92ebd8a6f1e46334f
   # nix-sha256: sha256-X/8l6jvudzi46dWyrvOAPxdT4f2nSAISGEzqVNyelKY=
