[#94] Timeshift -> clock changes
"timeshifts" is not common terminology. We should use "time changes" or "clock changes" instead, see examples of use in the wild:

  * https://www.timeanddate.com/time/change/portugal/lisbon
  * https://www.worlddata.info/europe/portugal/timezones.php

--- a/tzbot.cabal
+++ b/tzbot.cabal
@@ -300,8 +300,8 @@ test-suite tzbot-test
   type: exitcode-stdio-1.0
   main-is: Main.hs
   other-modules:
+      Test.TzBot.CheckForClockChangesSpec
       Test.TzBot.ConfigSpec
-      Test.TzBot.GetTimeshiftsSpec
       Test.TzBot.HandleTooManyRequests
       Test.TzBot.MessageBlocksSpec
       Test.TzBot.ParserSpec
