[#94] Time refs -> Time references
Problem: We shouldn't use abbreviations like "time refs" in user-facing messages.

Solution: Spell them out in full, i.e. "time references"

--- a/manifest.yml
+++ b/manifest.yml
@@ -9,7 +9,7 @@ features:
     display_name: TzBot
     always_online: true
   shortcuts:
-    - name: Translate time refs
+    - name: Translate time references
       type: message
       callback_id: tz_view
       description: Translate to the user's timezone
