[Chore] Move `doctest.hs` to its own folder
Problem: Because the stack components `test` and `doctest` were in the
same `./test` folder, HLS was loading all `./test/*` files into the
`doctest` component. This means devs would get lots of errors related to
missing dependencies when trying to load files from the `test`
component.

Solution: Move files from the `doctest` component to the `./doctest`
folder.

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -28,7 +28,7 @@ steps:
     depends_on: build
     commands:
       - nix build -L .#checks.x86_64-linux.test
-      - nix develop .#doctest -c runghc test/doctests.hs
+      - nix develop .#doctest -c runghc doctest/doctests.hs
 
   - label: xrefcheck
     command: nix run github:serokell/xrefcheck
