--- a/package.yaml
+++ b/package.yaml
@@ -114,7 +114,7 @@ tests:
     - QuickCheck
   doctests:
     main:                doctests.hs
-    source-dirs:         test
+    source-dirs:         doctest
     other-modules:       []
     ghc-options:
     - -threaded
