--- a/stack.yaml
+++ b/stack.yaml
@@ -10,20 +10,17 @@ packages:
 extra-deps:
 - nyan-interpolation-0.9.2
 - nyan-interpolation-core-0.9.2
+- guid-0.1.0@sha256:a7c975be473f6f142d5cc1b39bc807a99043d20b1bb0873fdfe7a3ce84d2faf1,1078
+- glider-nlp-0.4@sha256:3bf4edc4dc72b633debc0ffc2dc8edffae7871ed59c400512ac5aa4cf4a2bc90,2339
+- tztime-0.1.1.0
 - git: https://github.com/velveteer/slacker.git
   commit: bf8e13bbc566f92f900d2cc92ebd8a6f1e46334f
   # nix-sha256: sha256-X/8l6jvudzi46dWyrvOAPxdT4f2nSAISGEzqVNyelKY=
-- git: https://github.com/serokell/tztime.git
-  commit: 79034a1afc072e859df1ef8f58c2a1cdc04c78a3
 - git: https://github.com/martijnbastiaan/doctest-parallel
   commit: 112b85b55c63dae1cc52b5216efe03873f1acc06
 
-- guid-0.1.0@sha256:a7c975be473f6f142d5cc1b39bc807a99043d20b1bb0873fdfe7a3ce84d2faf1,1078
-
 # Slacker's deps
 - monad-logger-aeson-0.3.1.0@sha256:dbb1f816d00a820982094362551e20582de0a27c337d430fa7080dcacbe66f34,5193
-- context-0.2.0.1@sha256:b5a1390a5ad11b7edd0449c9ef96823f082bff4988bd09583e37a4e93e9aad10,1891
-- glider-nlp-0.4@sha256:3bf4edc4dc72b633debc0ffc2dc8edffae7871ed59c400512ac5aa4cf4a2bc90,2339
 
 nix:
   enable: false
